--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/button": "^2.2.13",
     "@heroui/card": "^2.2.10",
     "@heroui/chip": "^2.2.7",
     "@heroui/divider": "^2.2.6",
+    "@heroui/link": "^2.2.11",
+    "@heroui/modal": "^2.2.11",
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
     "@radix-ui/react-radio-group": "^1.2.3",
