--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
     "@radix-ui/react-radio-group": "^1.2.3",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.1",
